--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
     }
   ],
    "require": {
-     "php": ">= 5.5",
-     "guzzlehttp/guzzle": "~6.0"
+     "php": "^8.1",
+     "guzzlehttp/guzzle": "^7.3"
    },
    "require-dev": {
-     "phpunit/phpunit": "4.5.*"
+     "phpunit/phpunit": "^9.5"
    },
    "autoload": {
      "psr-4": {
