--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
    "require": {
      "php": "^8.1",
-     "guzzlehttp/guzzle": "^7.3"
+     "guzzlehttp/guzzle": "^6.1 || ^7.3"
    },
    "require-dev": {
      "phpunit/phpunit": "^9.5"
